[package]
name = "cmod"
version = "0.1.0"
edition = "2024"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true
[dependencies]
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "native-tls-vendored"] }
scraper = "0.25.0"
clap = { version = "4.5", features = ["derive"] }
inquire = "0.9.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"